@@ -1,7 +1,6 @@
 [buildout]
 # See which products are not pinned.
 extensions =
-    buildout.dumppickedversions
     mr.developer
 
 find-links =
