@@ -2,8 +2,13 @@
 # Temporary version, should be removed when standard Plone has this
 # version or a later one.
 AccessControl = 3.0.9
+Jinja2 = 2.8
 Products.PloneHotfix20150910 = 1.1
 Products.PloneHotfix20151208 = 1.0
+mr.developer = 1.34
+setuptools = 19.2
+zc.buildout = 2.5.0
+zc.recipe.egg = 2.0.3
 
 # Rest.
 collective.emaillogin4 = 1.3
@@ -23,6 +28,7 @@ gp.recipe.node = 0.12.7.1
 hexagonit.recipe.cmmi = 2.0
 hexagonit.recipe.download = 1.7
 jquery.pyproxy = 0.5
+MarkupSafe = 0.23
 meld3 = 0.6.10
 mr.scripty = 1.0b3
 munin.varnish = 1.0a3
@@ -43,6 +49,7 @@ Products.PythonField = 1.1.3
 Products.SimpleAttachment = 5.0.0
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
+Products.ZServerViews = 0.2
 pyPDF = 1.13
 python-archive = 0.2
 quintagroup.captcha.core = 0.4.3
